--- a/index.Rmd
+++ b/index.Rmd
@@ -14,6 +14,7 @@ http://jupyter.utoronto.ca/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.
 -->
 
 ```{r setup, include=FALSE}
+renv::restore()
 library(learnr)
 knitr::opts_chunk$set(echo = FALSE)
 ```
