--- a/index.Rmd
+++ b/index.Rmd
@@ -9,9 +9,7 @@ runtime: shiny_prerendered
 
 
 ```{r setup, include=FALSE}
-if (!require("learnr"))
-  install.packages("learnr", repos = "https://cloud.r-project.org",
-                   dependencies = c("Depends", "Imports"), quiet = TRUE)
+library("learnr")
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
